--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 
-input[type=text], select {
+input[type=file], select {
     width: 100%;
     height: 200px;
     padding: 12px 20px;
@@ -10,6 +10,36 @@ input[type=text], select {
     box-sizing: border-box;
     font-size: 42px;
     font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+textarea {
+    width: 100%;
+    /* height: 30%; */
+    /* padding: 12px 20px; */
+    margin: 8px 0;
+    display: inline-block;
+    border: 3px solid rgb(0, 0, 0);
+    /* border-radius: 4px; */
+    box-sizing: border-box;
+    /* font-size: 42px; */
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+.btn {
+    width: 100px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 16px 8px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 18px;  
+}
+
+.btn:hover {
+    background-color: #45a049;
 }
 
  input[type=submit] {
@@ -34,6 +64,7 @@ p {
     color: antiquewhite;
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
+
 
 .container {
     border-radius: 5px;
