--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,32 @@
 
-input[type=text], select {
+textarea {
     width: 100%;
-    height: 200px;
-    padding: 12px 20px;
+    /* height: 30%; */
+    /* padding: 12px 20px; */
     margin: 8px 0;
     display: inline-block;
     border: 3px solid rgb(0, 0, 0);
-    border-radius: 4px;
+    /* border-radius: 4px; */
     box-sizing: border-box;
-    font-size: 42px;
+    /* font-size: 42px; */
     font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+.btn {
+    width: 100px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 16px 8px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 18px;  
+}
+
+.btn:hover {
+    background-color: #45a049;
 }
 
  input[type=submit] {
@@ -34,6 +51,7 @@ p {
     color: antiquewhite;
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
+
 
 .container {
     border-radius: 5px;
