browse and upload content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
+
+    <!--Browse and Upload content-->
 </div>
 
 <div class="container" flex>
@@ -21,6 +23,7 @@
   <div flex fxLayout="row" fxLayout.lt-sm="column" fxLayout.lt-md="column" fxLayoutGap = "20px"> 
       <div fxFlex="50"> 
           <form novalidate class="simple-form">
+                <textarea class="form-control" rows="15" [(ngModel)]="ba" name="ba"></textarea>
           </form>
       </div>
 
