--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,62 +1,24 @@
 
-textarea {
-    width: 100%;
-    /* height: 30%; */
-    /* padding: 12px 20px; */
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid rgb(0, 0, 0);
-    /* border-radius: 4px; */
-    box-sizing: border-box;
-    /* font-size: 42px; */
-    font-family: Verdana, Geneva, Tahoma, sans-serif
-}
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-.btn {
-    width: 100px;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 16px 8px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    text-align: center;
-    font-size: 18px;  
-}
-
-.btn:hover {
-    background-color: #45a049;
-}
-
- input[type=submit] {
-    width: 100px;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 16px 8px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    text-align: center;
-    font-size: 18px;
-}
-
-input[type=submit]:hover {
-    background-color: #45a049;
-}
-
-p {
+nav {
+    background: #222122;
+    padding-left: 20px;
+    font-family: 'Open Sans', sans-serif;
     font-size: 24px;
-    color: antiquewhite;
-    font-family: Verdana, Geneva, Tahoma, sans-serif
+    /* padding-left: 40px; */
 }
 
-
-.container {
-    border-radius: 5px;
-    background-color: #6e6a6a;
+a {
+    color: aliceblue;
     padding: 20px;
-    margin-left: 5%;
-    margin-right: 5%;
+    text-decoration: none;
+}
+
+a:hover {
+    color: aqua;
+}
+
+a:active {
+    color: aqua;
 }
