--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,58 @@
 
-<div>
-    <nav flex fxLayout="row" fxLayout.lt-sm="column" fxlayout.lt-md="column">
+<!-- <div>
+    <nav class="navbar navbar-toggleable-md" flex fxLayout="row" fxLayout.lt-sm="column" fxlayout.lt-md="column">
         <a routerLink="">Test UI</a>
         <a routerLink="adminui">Admin UI</a>
         <a routerLink="logs">Logs</a>
         <a routerLink="stats">Stats</a>
     </nav>
 </div>
+<router-outlet></router-outlet> -->
+
+    <div class="intro">
+      <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-dark">
+        <div class="container-fluid">
+         <a routerLink="" class="navbar-brand text-light" id="logo">Angular+Bootstrap</a> 
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+          <div class="collapse navbar-collapse justify-content-end" id="myNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item active"><a class="nav-link" routerLink="">Test UI</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink="adminui">Admin UI</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink="logs">Logs</a></li>
+              <li class="nav-item"><a class="nav-link" routerLink="stats">Stats</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>  
+
+
+      <!-- <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-dark bg-faded">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="navbarToggler1" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+            <li class="nav-item active">
+              <a class="nav-link" routerLink="">Test UI</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="adminui">Admin UI</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="logs">Logs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="stats">Stats</a>
+            </li>
+          </ul>
+        </div>
+      </nav> -->
+
 <router-outlet></router-outlet>
 
 
