--- a/src/app/testui/testui.component.css
+++ b/src/app/testui/testui.component.css
@@ -1,9 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+/* div {
+    position: absolute;
+    height: 100%;
+} */
+
 textarea {
     width: 100%;
-    /* height: 30%; */
+    height: 31vh;
     /* padding: 12px 20px; */
     margin: 8px 0;
     display: inline-block;
@@ -50,16 +55,24 @@ input[type=submit]:hover {
 } */
 
 p {
-    font-size: 20px;
+    font-size: 24px;
     color: antiquewhite;
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
-
-.container {
+.intro {
+    min-height: 90.5vh;
+    display: flex;
+}
+.container-fluid {
     /* border-radius: 5px; */
+    width: 100%;
+    min-height: 100%;
     background-color: #6e6a6a;
-    padding: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 20px;
     /* margin-left: %;
     margin-right: 5%; */
 }
+
