--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    height: 100%;
+    /* display: inline-flex; */
+    margin:0; padding:0; 
+}
+
+/*  */
