--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     <div class="intro">
       <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-dark">
         <div class="container-fluid">
-         <a routerLink="" class="navbar-brand text-light" id="logo">Angular+Bootstrap</a> 
+         <a routerLink="" class="navbar-brand text-light" id="logo"><img src="https://s3.amazonaws.com/ihawke-image/Simple-logos.jpg"></a> 
           <div class="navbar-header">
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
