--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -1,3 +1,29 @@
-<p style="padding: 10px">
-  stats works!
-</p>
+<div class="intro">
+    <div class="container-fluid">
+
+        <div class="row text-center">
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <button type="button" class="btn"> Button </button>
+          </div>
+      
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <button type="button" class="btn"> Button </button>
+          </div>
+      
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <button type="button" class="btn"> Button </button>
+          </div> 
+      
+        </div>
+
+
+        <div class="row" >
+            <div class="col-md-12 col-sm-12 col-lg-12">
+                <form action="/action_page.php" class="form">
+                  <textarea class="form-control" [(ngModel)]="sa" name="sa" placeholder="Input your text here..."></textarea>
+                </form>
+            </div>
+        </div>
+      
+      </div>
+</div>
