--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 <router-outlet></router-outlet> -->
 
     <div class="intro">
-      <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-dark">
+      <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-light">
         <div class="container-fluid">
          <a routerLink="" class="navbar-brand text-light" id="logo"><img src="https://s3.amazonaws.com/ihawke-image/Simple-logos.jpg"></a> 
           <div class="navbar-header">
