--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,8 +31,8 @@ a:focus {
     width: 100%;
     margin-bottom: 0;
     border-radius: 0;
-    background-color: #222122;
-    color: #FFF;
+    background-color: #fff;
+    color: #222122;
     /* padding: 20px; */
     padding: 10px 20px 10px 20px; 
     font-size: 1.4em;
@@ -55,17 +55,20 @@ a:focus {
 }
 
  .navbar-nav > li >a {
-    color: aliceblue;
+    color: rgb(130, 133, 133);
     padding: 20px;
     text-decoration: none;
+    font-weight: normal;
 }
 
 .navbar-nav > li > a:hover {
-    color: aqua;
+    color: #4edfd5;
+    font-weight: normal;
 }
 
 .navbar-nav > li > a:focus {
-    color: rgb(130, 133, 133);
+    color: #000000;
+    font-weight: bold;
 }  
 
 /* .navbar-toggler {
