--- a/src/app/adminui/adminui.component.css
+++ b/src/app/adminui/adminui.component.css
@@ -8,7 +8,8 @@
     /* border-radius: 5px; */
     width: 100%;
     min-height: 100%;
-    background-color: #6e6a6a;
+    /* background-color: #6e6a6a; */
+    background-color: rgb(48, 48, 124);
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 20px;
