--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -55,15 +55,15 @@ a:focus {
 }
 
  .navbar-nav > li >a {
-    color: rgb(130, 133, 133);
+    color: rgb(114, 114, 114);
     padding: 20px;
     text-decoration: none;
-    font-weight: normal;
+    /* font-weight: bold; */
 }
 
 .navbar-nav > li > a:hover {
     color: #4edfd5;
-    font-weight: normal;
+    /* font-weight: bold; */
 }
 
 .navbar-nav > li > a:focus {
