--- a/src/app/stats/stats.component.css
+++ b/src/app/stats/stats.component.css
@@ -8,7 +8,7 @@
     /* border-radius: 5px; */
     width: 100%;
     min-height: 100%;
-    background-color: #6e6a6a;
+    background-color: #8f4228;
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 20px;
