--- a/src/app/testui/testui.component.css
+++ b/src/app/testui/testui.component.css
@@ -68,7 +68,7 @@ p {
     /* border-radius: 5px; */
     width: 100%;
     min-height: 100%;
-    background-color: #6e6a6a;
+    background-color: rgb(40, 92, 92);
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 20px;
