--- a/src/app/testui/testui.component.css
+++ b/src/app/testui/testui.component.css
@@ -6,6 +6,23 @@
     height: 100%;
 } */
 
+label {
+    padding: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: aliceblue;
+    text-align: center;
+}
+
+input[type=checkbox] {
+    padding: 20px;
+    margin: 5px;
+}
+
+input[type=checkbox]:hover {
+    box-shadow:0px 0px 10px #ffffff;
+    padding: 20px;
+}
+
 textarea {
     width: 100%;
     height: 31vh;
