--- a/src/app/testui/testui.component.html
+++ b/src/app/testui/testui.component.html
@@ -72,10 +72,10 @@
 
         <div class="row">
             <div class="col-sm-6">
-                <p id="timeLeft">Time taken:</p>
+                <p class ="timeLabel" id="timeLeft">Time taken:</p>
             </div>
             <div class="col-sm-6">
-                <p id="timeRight">Time taken:</p>
+                <p class ="timeLabel" id="timeRight">Time taken:</p>
             </div>
         </div>
       
