--- a/src/app/testui/testui.component.css
+++ b/src/app/testui/testui.component.css
@@ -77,7 +77,13 @@ p {
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
-.timeLabel {
+#timeLeft {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: aliceblue;
+    font-size: 17px;
+}
+
+#timeRight {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: aliceblue;
     font-size: 17px;
