--- a/src/app/testui/testui.component.css
+++ b/src/app/testui/testui.component.css
@@ -78,12 +78,14 @@ p {
 }
 
 #timeLeft {
+    padding-top: 10px; 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: aliceblue;
     font-size: 17px;
 }
 
 #timeRight {
+    padding-top: 10px; 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: aliceblue;
     font-size: 17px;
