--- a/src/app/testui/testui.component.html
+++ b/src/app/testui/testui.component.html
@@ -70,23 +70,25 @@
             </div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-sm-6">
                 <p class ="timeLabel" id="timeLeft">Time taken:</p>
             </div>
             <div class="col-sm-6">
                 <p class ="timeLabel" id="timeRight">Time taken:</p>
             </div>
-        </div>
+        </div> -->
       
         <div class="row"> 
             <div class="col-md-12 col-sm-12 col-lg-6"> 
+                <p class ="timeLabel" id="timeLeft">Time taken:</p>
                 <form novalidate class="simple-form">
                       <textarea class="form-control" [(ngModel)]="ba" name="ba"></textarea>
                 </form>
             </div>
       
             <div class="col-md-12 col-sm-12 col-lg-6">
+                <p class ="timeLabel" id="timeRight">Time taken:</p>
                 <form novalidate class="simple-form">
                       <textarea class="form-control" [(ngModel)]="ca" name="ba"></textarea>
                 </form>
