Folder Up and Post content with slight UI Change

--- a/src/app/adminui/adminui.component.css
+++ b/src/app/adminui/adminui.component.css
@@ -9,7 +9,8 @@
     width: 100%;
     min-height: 100%;
     /* background-color: #6e6a6a; */
-    background-color: rgb(48, 48, 124);
+    /* background-color: rgb(48, 48, 124); */
+    background-color:#006884;
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 20px;
@@ -22,7 +23,7 @@
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
-    margin: 16px 8px;
+    margin: 16px 16px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -50,4 +51,23 @@
     box-sizing: border-box;
     /* font-size: 14px; */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+label {
+    padding: 5px;
+    margin-right: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: aliceblue;
+    text-align: center;
+}
+
+input[type=radio] {
+    padding: 5px;
+    margin: 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+input[type=radio]:hover {
+    box-shadow:0px 0px 3px #ffffff;
+    padding: 10px;
 }
