--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -1,7 +1,77 @@
 <div class="intro">
-    <div class="container-fluid">
+  <div class="container-fluid">
 
-        <div class="row text-center">
+    <!-- <div class="form-group row">
+      <label for="inputPassword" class="col-form-label">Password</label>
+      <div class="col-sm-10">
+        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+      </div>
+    </div> -->
+
+    <div class="forms">
+
+      <div class="form-group row">
+        <label class="col-sm-1 col-md-1 col-form-label">First</label>
+        <div class="col-sm-5">
+          <input type="text" class="form-control" id="first" placeholder="First">
+        </div>
+      </div>
+
+
+
+      <div class="form-group row">
+        <label class="col-sm-1 col-md-1 col-form-label">Second</label>
+        <div class="col-sm-5">
+          <input type="text" class="form-control" id="second" placeholder="Second">
+        </div>
+      </div>
+
+
+
+      <div class="form-group row">
+        <label class="col-sm-1 col-md-1 col-form-label">Date</label>
+        <div class="col-sm-2">
+          <input type="text" class="form-control" id="date" placeholder="Date">
+        </div>
+      </div>
+
+
+    </div>
+
+    <!-- <div class="forms">
+
+      <div class="form-group row">
+        <label class="col-sm-1 col-form-label">First</label>
+        <div class="col-sm-5 inputField">
+          <input type="text" class="form-control" id="first" placeholder="First">
+        </div>
+      </div>
+
+
+
+      <div class="form-group row">
+        <label class="col-sm-1 col-form-label">Second</label>
+        <div class="col-sm-5 inputField">
+          <input type="text" class="form-control" id="second" placeholder="Second">
+        </div>
+      </div>
+
+
+
+      <div class="form-group row">
+        <label class="col-sm-1 col-form-label">Date</label>
+        <div class="col-sm-2 dateField">
+          <input type="text" class="form-control" id="date" placeholder="Date">
+        </div>
+      </div>
+
+
+    </div> -->
+
+    <button type="button" class="btn" (click)="onClickButton()"> Button </button>
+
+
+    <!-- <div class="row text-center">
           <div class="col-sm-12 col-md-4 col-lg-4">
             <button type="button" class="btn"> Button </button>
           </div>
@@ -14,16 +84,16 @@
             <button type="button" class="btn"> Button </button>
           </div> 
       
-        </div>
+        </div> -->
 
 
-        <div class="row" >
-            <div class="col-md-12 col-sm-12 col-lg-12">
-                <form action="/action_page.php" class="form">
-                  <textarea class="form-control"></textarea>
-                </form>
-            </div>
-        </div>
-      
+    <div class="row">
+      <div class="col-md-12 col-sm-12 col-lg-12">
+        <form action="/action_page.php" class="form">
+          <textarea class="form-control" id="mainTextArea"></textarea>
+        </form>
       </div>
+    </div>
+
+  </div>
 </div>
