--- a/src/app/testui/testui.component.css
+++ b/src/app/testui/testui.component.css
@@ -5,6 +5,30 @@
     position: absolute;
     height: 100%;
 } */
+ /* drop-zone {
+    height: 100px;
+    border-width: 2px;
+    margin-bottom: 20px;
+  }
+  
+  /* skin.css Style*/
+ /* drop-zone {
+    color: #ccc;
+    border-style: dashed;
+    border-color: #ccc;
+    line-height: 200px;
+    text-align: center
+  }
+  drop-zone.drop {
+    color: #222;
+    border-color: #222;
+  } */
+
+/* file-drop {
+    color: aliceblue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 24px;
+} */
 
 label {
     padding: 20px;
