--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,14 @@ html {
     margin:0; padding:0; 
 }
 
+.filedrop {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 24px;
+    border: 2px dotted #ffffff;
+    color: bisque;
+    border-radius: 30px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+
 /*  */
