--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -8,35 +8,39 @@
       </div>
     </div> -->
 
-    <div class="forms">
+    <div class="form-horizontal">
 
-      <div class="form-group row">
+      <form class="form-group row">
         <label class="col-sm-1 col-md-1 col-form-label">First</label>
         <div class="col-sm-5">
           <input type="text" class="form-control" id="first" placeholder="First">
         </div>
-      </div>
+      </form>
 
 
-
-      <div class="form-group row">
+      <form class="form-group row">
         <label class="col-sm-1 col-md-1 col-form-label">Second</label>
         <div class="col-sm-5">
           <input type="text" class="form-control" id="second" placeholder="Second">
         </div>
-      </div>
+      </form>
 
 
-
-      <div class="form-group row">
+      <form class="form-group row">
         <label class="col-sm-1 col-md-1 col-form-label">Date</label>
         <div class="col-sm-2">
           <input type="text" class="form-control" id="date" placeholder="Date">
         </div>
-      </div>
-
+      </form>
 
     </div>
+
+    <!-- <form>
+      <div class="form-group form-inline row">
+        <label for="exampleFormControlFile1">input</label>
+        <input type="text" class="form-control" id="exampleFormControlFile1" placeholder="Test">
+      </div>
+    </form> -->
 
     <!-- <div class="forms">
 
