--- a/src/app/testui/testui.component.html
+++ b/src/app/testui/testui.component.html
@@ -9,11 +9,18 @@
             <!-- <input id="checkbox" type="checkbox"/><label for="checkbox">Left</label>
             <input id="checkbox" type="checkbox"/><label for="checkbox">Right</label> -->
 
-            <label class="checkbox-inline">
+            <!-- <label class="checkbox-inline">
                 <input type="checkbox" id="leftCheckbox" value="" checked="checked">Left
             </label>
             <label class="checkbox-inline">
                 <input type="checkbox" id="rightCheckBox" value="">Right
+            </label> -->
+
+            <label class="radio-inline">
+                <input name="radioGroup" id="radio1" value="option1" type="radio" checked=""> Left
+            </label>
+            <label class="radio-inline">
+                <input name="radioGroup" id="radio2" value="option2" type="radio"> Right
             </label>
 
             <!-- <label class="checkbox-inline">
