--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
             <a class="nav-link" routerLink="logs">Logs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="stats">Replay</a>
+            <a class="nav-link" routerLink="replay">Replay</a>
           </li>
         </ul>
       </div>
