--- a/src/app/replay/replay.component.css
+++ b/src/app/replay/replay.component.css
@@ -5,15 +5,12 @@
 }
 
 .container-fluid {
-    /* border-radius: 5px; */
     width: 100%;
     min-height: 100%;
     background-color: #d4533a;
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 20px;
-    /* margin-left: %;
-    margin-right: 5%; */
 }
 
 .forms {
@@ -45,22 +42,16 @@
   textarea {
     width: 100%;
     height: 65vh;
-    /* padding: 12px 20px; */
     margin: 8px 0;
     display: inline-block;
     border: 1px solid rgb(0, 0, 0);
-    /* border-radius: 4px; */
     box-sizing: border-box;
-    /* font-size: 14px; */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 label {
-    /* padding: 20px; */
-    padding-bottom: 30px; 
-    padding-left: 40px; 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: aliceblue;
-    text-align: left;
+    text-align: center;
     width: 8%;
 
 }
@@ -71,15 +62,6 @@ p {
     color:white;
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
-
-/* .form-group {
-    margin-right: 30px;
-    
-}
-
-.col-form-label {
-    margin-right: 20px;
-} */
 
 .inputField {
     width: 30%;
