--- a/src/app/replay/replay.component.css
+++ b/src/app/replay/replay.component.css
@@ -1,5 +1,5 @@
 
-.intro {
+/* .intro {
     min-height: 90.5vh;
     display: flex;
 }
@@ -69,4 +69,121 @@ p {
 
 .dateField {
     width: 10%;
+} */
+
+
+
+.intro {
+    min-height: 90.5vh;
+    display: flex;
 }
+
+.container-fluid {
+    width: 100%;
+    min-height: 100%;
+    background-color: azure;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 20px;
+}
+
+.forms {
+    padding-left:10px; 
+}
+
+mat-form-field {
+    font-size: 16px; 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+
+.btn {
+    width: 100px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 16px 8px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 18px;  
+    font-family: 'Open Sans', sans-serif;
+}
+
+.btn:hover {
+    background-color: #45a049;
+}
+
+.center-block {
+    float:none;
+  }
+
+  textarea {
+    width: 100%;
+    height: 65vh;
+    margin: 8px 0;
+    display: inline-block;
+    box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+label {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: aliceblue;
+    text-align: center;
+    width: 8%;
+
+}
+
+p {
+    font-size: 18px;
+    padding-top: 30px;
+    padding-right: 100px;
+    color:rgb(155, 151, 151);
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+.inputField {
+    width: 30%;
+}
+
+.dateField {
+    width: 10%;
+}
+
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+    padding: 20px;
+    color:rgb(110, 107, 107);
+  }
+
+  .example-datepicker {
+    padding: 20px;
+    width: 300px;
+    
+  }
+
+  .example-button-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .button-row {
+      padding-left: 20px;
+      padding-bottom: 20px;
+  }
+
+  .example-container {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .example-container > * {
+    width: 100%;
+  }
