--- a/src/app/replay/replay.component.html
+++ b/src/app/replay/replay.component.html
@@ -122,7 +122,7 @@
     </div>
 
     <div class="button-row">
-      <button mat-raised-button (click)="onClickButton()">Primary</button>
+      <button mat-raised-button (click)="onClickButton()" color="primary">Result</button>
     </div>
 
     <div class="row">
