--- a/src/app/adminui/adminui.component.css
+++ b/src/app/adminui/adminui.component.css
@@ -7,7 +7,8 @@
 .container-fluid {
     width: 100%;
     min-height: 100%;
-    background-color:#006884;
+    /* background-color:#006884; */
+    background-color: rgb(231, 236, 236);
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 20px;
@@ -62,4 +63,9 @@ input[type=radio] {
 input[type=radio]:hover {
     box-shadow:0px 0px 3px #ffffff;
     padding: 10px;
+}
+
+.button-group {
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
