--- a/src/app/adminui/adminui.component.html
+++ b/src/app/adminui/adminui.component.html
@@ -1,7 +1,7 @@
 <div class="intro">
   <div class="container-fluid">
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-sm-12 col-md-4 col-lg-4">
         <label class="radio-inline">
           <input name="radioGroup" id="radio1" value="option1" type="radio" checked=""> One
@@ -24,6 +24,26 @@
       <div class="col-md-12 col-sm-12 col-lg-12">
         <form action="/action_page.php" class="form">
           <textarea class="form-control" id="textArea"></textarea>
+        </form>
+      </div>
+    </div> -->
+
+
+    <mat-radio-group fxLayoutGap="10px" class="radio" [(ngModel)]="selectedRadio" #radioGroup="matRadioGroup">
+      <mat-radio-button value="1" [checked]="selectedRadio === '1'">One</mat-radio-button>
+      <mat-radio-button value="2">Two</mat-radio-button>
+      <mat-radio-button value="3">Three</mat-radio-button>
+    </mat-radio-group>
+
+    <div flex fxLayout="row" fxLayoutAlign="start left" fxLayoutGap="20px" class="button-group">
+      <button mat-raised-button (click)="onClickOne()" color="primary">First</button>
+      <button mat-raised-button (click)="onClickTwo()" color="primary">Second</button>
+    </div>
+
+    <div flex fxlayout="row">
+      <div fxFlex="100%">
+        <form action="/action_page.php" class="form">
+          <textarea class="form-control" [(ngModel)]="textArea" name="textArea" placeholder=""></textarea>
         </form>
       </div>
     </div>
