--- a/src/app/testui/testui.component.css
+++ b/src/app/testui/testui.component.css
@@ -4,7 +4,7 @@
 label {
     padding: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: aliceblue;
+    color: rgb(88, 88, 88);
     text-align: center;
 }
 
@@ -23,8 +23,12 @@ textarea {
     height: 31vh;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid rgb(0, 0, 0);
+    /* border: 1px solid rgb(0, 0, 0); */
     box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+button {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -48,21 +52,21 @@ textarea {
 
 p {
     font-size: 24px;
-    color: antiquewhite;
+    color: rgb(83, 82, 82);
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
 #timeLeft {
     padding-top: 10px; 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: aliceblue;
+    color: rgb(90, 90, 90);
     font-size: 17px;
 }
 
 #timeRight {
     padding-top: 10px; 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: aliceblue;
+    color: rgb(90, 90, 90);
     font-size: 17px;
 }
 
@@ -73,9 +77,46 @@ p {
 .container-fluid {
     width: 100%;
     min-height: 100%;
-    background-color: rgb(40, 92, 92);
+    /* background-color: rgb(40, 92, 92); */
+    /* background-color: azure; */
+    background-color: rgb(231, 236, 236);
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 20px;
 }
+
+.example-full-width {
+    width: 100%;
+    padding: 20px;
+    color:rgb(110, 107, 107);
+  }
+
+.center {
+    padding-top: 20px;
+}
+
+.radio {
+    padding-top: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+mat-card-title {
+    font-size: 24px;
+    color: rgb(104, 104, 104);
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+.example-card {
+    width: 100%;
+    height: 31%;
+  }
+
+  mat-form-field {
+      width: 100%;
+  }
+
+/* mat-raised-button {
+    font-size: 24px; 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  } */
 
