--- a/src/app/testui/testui.component.html
+++ b/src/app/testui/testui.component.html
@@ -1,4 +1,4 @@
-<div class="intro">
+<!-- <div class="intro">
     <div class="container-fluid">
         <div>
             <input type="file" accept=".txt,.json,.md" style="display: none" #file (change)="browseText($event)" />
@@ -49,6 +49,67 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-6">
+                <p align="left" id="demo"></p>
+            </div>
+        </div>
+
+    </div>
+</div> -->
+
+<div class="intro">
+    <div class="container-fluid">
+
+        <div flex fxLayout="row" fxLayoutAlign="start left">
+            <div class="button-row" fxLayout.lg="row" fxLayout.md="row" fxLayout.sm="row" fxLayout.xs="column" fxLayoutGap="20px">
+                <input type="file" accept=".txt,.json,.md" style="display: none" #file (change)="browseText($event)" />
+                <button mat-raised-button (click)="file.click()" color="primary">Upload</button>
+                <button mat-raised-button (click)="onSubmit()" color="primary">Submit</button>
+                <button mat-raised-button (click)="clearText()" color="primary">Clear</button>
+
+                <mat-radio-group fxLayoutGap="10px" class="radio" [(ngModel)]="selectedRadio" #radioGroup="matRadioGroup">
+                    <mat-radio-button value="1" [checked]="selectedRadio === '1'">Left</mat-radio-button>
+                    <mat-radio-button value="2">Right</mat-radio-button>
+                </mat-radio-group>
+
+            </div>
+        </div>
+
+        <div flex fxlayout="row">
+            <div class="center">
+                <file-drop customstyle="filedrop" id="drop-zone" (onFileDrop)="dropped($event)" (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
+                    <span>
+                        <font color="gray">Drop files here</font>
+                    </span>
+                </file-drop>
+            </div>
+        </div>
+
+        <div flex fxlayout="row">
+            <div fxFlex="100%">
+                <form action="/action_page.php" class="form">
+                    <textarea class="form-control" [(ngModel)]="topTextArea" name="topTextArea" placeholder="Input your text here..."></textarea>
+                </form>
+            </div>
+        </div>
+
+        <div flex fxlayout="row" fxLayout.md="column" fxLayout.sm="column" fxLayout.xs="column" fxLayoutGap="20px">
+            <div fxFlex="50%">
+                <p class="timeLabel" id="timeLeft">Time taken:</p>
+                <form novalidate class="simple-form">
+                    <textarea class="form-control" [(ngModel)]="leftTextArea" name="leftTextArea"></textarea>
+                </form>
+            </div>
+
+            <div fxFlex="50%">
+                <p class="timeLabel" id="timeRight">Time taken:</p>
+                <form novalidate class="simple-form">
+                    <textarea id="rightTextArea" class="form-control" [(ngModel)]="rightTextArea" name="rightTextArea"></textarea>
+                </form>
+            </div>
+        </div>
+
+        <div flex fxlayout="row">
+            <div fxFlex="100%">
                 <p align="left" id="demo"></p>
             </div>
         </div>
