--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,8 @@ html {
 .filedrop {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 24px;
-    border: 2px dotted #ffffff;
-    color: bisque;
+    border: 2px dotted #727272;
+    color: rgb(255, 255, 255);
     border-radius: 30px;
     margin-top: 15px;
     margin-bottom: 20px;
